# chunk_signature

./: CMakeLists.txt
include/hasher/: base_hasher.h
lib/hasher/: base_hasher.cpp  crc32_hasher.cpp  crc32_hasher.h  md5_hasher.cpp  md5_hasher.h  sha1_hasher.cpp  sha1_hasher.h
src/: CMakeLists.txt  base_hasher.cpp  base_hasher.h  common.h  crc32_hasher.cpp  crc32_hasher.h  file_chunker.cpp  file_chunker.h  main.cpp  md5_hasher.cpp  prefetch_file_reader.cpp  prefetch_file_reader.h  program_config.cpp  program_config.h  result_writer.cpp  result_writer.h  thread_executor.cpp  thread_executor.h
src/hasher/: base_hasher.cpp  base_hasher.h  crc32_hasher.cpp  crc32_hasher.h  md5_hasher.cpp  md5_hasher.h
src/result_writer/: base_result_writer.cpp  base_result_writer.h  m_mapped_result_writer.cpp  m_mapped_result_writer.h
test/: program_config_test.cpp
